tests/invalid/redeclaration_of_symbol.ar
fn main() 
{

}

fn redecl_var(n: u64)
{
    const n = n;
}
